<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:divider="@drawable/shape_horizontal_line"
    android:orientation="vertical"
    android:showDividers="middle">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/shape_title3"
            android:textColor="@color/colorText"
            android:textSize="17sp" />
    </FrameLayout>

    <com.wyang.common.widget.extend.ShapeButton
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/shape_tab_1"
        app:sGravity="left"
        app:sLeftIcon="@drawable/ic_01"
        app:sRightIcon="@drawable/ic_arrow_right"
        app:sSelector="ripple" />

    <com.wyang.common.widget.extend.ShapeButton
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/shape_tab_2"
        app:sGravity="left"
        app:sLeftIcon="@drawable/ic_02"
        app:sRightIcon="@drawable/ic_arrow_right"
        app:sSelector="ripple" />

    <com.wyang.common.widget.extend.ShapeButton
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/shape_tab_3"
        app:sGravity="left"
        app:sLeftIcon="@drawable/ic_03"
        app:sRightIcon="@drawable/ic_arrow_right"
        app:sSelector="ripple" />

    <com.wyang.common.widget.extend.ShapeButton
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/shape_tab_4"
        app:sGravity="left"
        app:sLeftIcon="@drawable/ic_04"
        app:sRightIcon="@drawable/ic_arrow_right"
        app:sSelector="ripple" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>